fix: fixed text align

--- a/media.css
+++ b/media.css
@@ -204,7 +204,7 @@
         font-size: 12px;
         font-weight: 300;
         line-height: 14px;
-        
+        text-align: justify;
         
     }
 }
